@@ -15,6 +15,8 @@
 
 open Printf;;
 
+let printers = ref []
+
 let locfmt = format_of_string "File \"%s\", line %d, characters %d-%d: %s";;
 
 let field x i =
@@ -48,9 +50,16 @@ let to_string = function
   | Assert_failure(file, line, char) ->
       sprintf locfmt file line char (char+6) "Assertion failed"
   | x ->
-      let x = Obj.repr x in
-      let constructor = (Obj.magic(Obj.field (Obj.field x 0) 0) : string) in
-      constructor ^ (fields x)
+      let rec conv = function
+        | hd :: tl ->
+            (match try hd x with _ -> None with
+            | Some s -> s
+            | None -> conv tl)
+        | [] ->
+            let x = Obj.repr x in
+            let constructor = (Obj.magic(Obj.field (Obj.field x 0) 0) : string) in
+            constructor ^ (fields x) in
+      conv !printers
 ;;
 
 let print fct arg =
@@ -125,3 +134,5 @@ let get_backtrace () =
 external record_backtrace: bool -> unit = "caml_record_backtrace"
 external backtrace_status: unit -> bool = "caml_backtrace_status"
 
+let register_printer fn =
+  printers := fn :: !printers
